# alicetokenacc

./: Makefile.am  Makefile.in  README  XrdAliceTokenAcc.cc  XrdAliceTokenAcc.hh  configure  configure.ac  create_rpm  create_targz  xrootd-alicetokenacc.spec
.authz/xrootd/: TkAuthz.Authorization
